--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <meta content='IE=edge' http-equiv='X-UA-Compatible' />
 
 <link rel="icon" type="image/svg+xml" href="content/favicon.png">
-
+<link rel="apple-touch-icon" href="content/favicon.png">
+  
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
@@ -22,7 +23,7 @@
 
 <head>
   <title>I Love U Jihan Aribahanun</title>
-  <meta name="description" content="HTML Feeldream Repl Co">
+  <meta name="description" content="For Jihan Aribahanun">
 </head>
 
 <body>
