--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
 <script src="https://unpkg.com/scrollreveal"></script>
 
 <head>
-  <title>I Love U Jihan Aribahanun</title>
-  <meta name="description" content="For Jihan Aribahanun">
+  <title>I Love U ريزكيياتول فوچاه</title>
+  <meta name="description" content="For ريزكيياتول فوچاه">
 </head>
 
 <body>
 
   <div class="overlay">
-    <div class="loading-message">Hai Jihan Aribahanun<br>Tunggu dulu ya..</div>
+    <div class="loading-message">Hai ريزكيياتول فوچاه<br>Tunggu dulu ya cantek..</div>
   </div>
 
   <audio src="content/bersamamu.mp3" id="linkmp3" class="sembunyi" loop></audio>
