--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="loading-message">Hai ريزكيياتول فوچاه<br>Tunggu dulu ya cantek..</div>
   </div>
 
-  <audio src="content/bersamamu.mp3" id="linkmp3" class="sembunyi" loop></audio>
+  <audio src="content/saatkauhadir.mp3" id="linkmp3" class="sembunyi" loop></audio>
 
   <section class="first">
     <div class="wp"><img id="imgsatu" src="content/img1.jpg" /></div>
