--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <section class="first">
     <div class="wp"><img id="imgsatu" src="content/img1.jpg" /></div>
     <img id="first_stiker" class="stiker fade-in" src="content/ji01.gif" />
-    <h1 class="title">Hai Jihan Cantiknya Mas 🤗</h1>
+    <h1 class="title">Hai كيييا Cantiknya Mas 🤗</h1>
     <p class="flip">Mas Bim boleh jujur ga nih ? 😅</p>
     <p class="slide-up"><i>Scroll terus ke bawah ya cantik :)</i></p>
   </section>
@@ -46,23 +46,20 @@
     <div class="wp"><img id="imgdua" src="content/img2.jpg" /></div>
     <img class="stiker fade-in" src="content/ji02.gif" />
     <h2 class="title"><i>Sebenernya..</i>🙈</h2>
-    <p class="slide-right">Mas bim suka sama <b class="lingkar">Jihan 😅😁</b></p>
+    <p class="slide-right">Mas bim suka sama <b class="lingkar">كيييا 😅😁</b></p>
     <p class="slide-right">malu mas bim mau bilangnya <b class="lingkar"></b> :(</p>
   </section>
 
   <section>
     <div class="wp"><img id="imgtiga" src="content/img3.jpg" /></div>
-    <p id="teksnimasi">Kalo Jihan tanya kenapa aku mas Bim bisa secepat ini suka sama Jihan, itu karena mas Bim punya
-      rasa nyaman tersendiri yang ga pernah mas Bim temui di mana pun.<br><br><b><i>Jihan Tau?</i></b><br>Gaada yang
-      bisa bikin mas Bim senyaman ini selain Jihan<br><br>Dan karena kenal sama Jihan, mas Bim merasakan apa itu
-      kenyamanan, apa itu kebahagiaan, dan kamu sekaligus rumah bagi mas Bim :)</p>
+    <p id="teksnimasi">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis et, dicta libero minima repellendus voluptatem quisquam nihil suscipit earum molestiae, maiores dolorem voluptates tempore dolorum autem, deserunt cumque repellat obcaecati nesciunt explicabo esse blanditiis ea. Pariatur, fugit doloremque in voluptates sunt hic facere quod odio fugiat et repudiandae suscipit dolorum debitis maiores eligendi commodi qui dignissimos laudantium cumque quas soluta. Eum eius in voluptate, quidem, vitae natus doloribus, sint minus voluptatibus autem distinctio itaque provident animi excepturi quibusdam dignissimos. Numquam placeat dolore, eos praesentium aliquid dignissimos fugiat doloremque asperiores! Facilis autem eaque amet quidem ut voluptas quasi sit ratione doloribus!</p>
   </section>
 
   <section>
     <div class="wp"><img id="imgempat" src="content/img4.jpg"></div>
     <img class="stiker fade-in" src="content/ji01.gif" />
-    <h2 class="title"><i>Intinya gini ya Jihan,</i></h2>
-    <p class="slide-right"><b>Jihan Mau engga<br>Jadi Pacar nya mas Bim ? Sekaligus jadi pendampingnya mas Bim
+    <h2 class="title"><i>Intinya gini ya كيييا,</i></h2>
+    <p class="slide-right"><b>كيييا Mau engga<br>Jadi Pacar nya mas Bim ? Sekaligus jadi pendampingnya mas Bim
         🥰😍💖</b></p>
     <div id="Tombol">
       <a id="By" onClick="fungsimau()">Mau 🫣🤭</a>
@@ -96,7 +93,7 @@
     function fungsimau() {
       fungsi = 0; tes();
       teksjudulakhir = "Yeayyy! I Love U Cantiknya mas Bim 😘";
-      tekskalimatakhir = "Maacih Jihan udah mau nerima mas Bim<br>Jihan mau kok jadi pacarnya mas Bim, hihi 🤭";
+      tekskalimatakhir = "Maacih كيييا udah mau nerima mas Bim<br>كيييا mau kok jadi pacarnya mas Bim, hihi 🤭";
     }
     function fungsigamau() {
       fungsi = 0; tes();
@@ -107,7 +104,7 @@
     teksjudulakhir2 = "I Love You Cantikku 🥰✨";
     tekspalingakhir = "Jangan lupa balas pesan<br>ke WhatsApp mas Bim ya! ✨";
 
-    pesanwhatsapp = "Jihan mau kok jadi pacar mas Bim ><";
+    pesanwhatsapp = "كيييا mau kok jadi pacar mas Bim ><";
 
     const body = document.querySelector("body"); initom.style = "opacity:0;bottom:0;transition:none"; audio = new Audio('' + linkmp3.src); function berjatuhan() { const heart = document.createElement("div"); heart.className = "fas fa-heart"; heart.style.left = (Math.random() * 90) + "vw"; heart.style.animationDuration = (Math.random() * 3) + 2 + "s"; body.appendChild(heart); } setInterval(function name(params) { var heartArr = document.querySelectorAll(".fa-heart"); if (heartArr.length > 100) { heartArr[0].remove() } }, 100);
   </script>
