--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
   <section>
     <div class="wp"><img id="imgtiga" src="content/img3.jpg" /></div>
-    <p id="teksnimasi">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis et, dicta libero minima repellendus voluptatem quisquam nihil suscipit earum molestiae, maiores dolorem voluptates tempore dolorum autem, deserunt cumque repellat obcaecati nesciunt explicabo esse blanditiis ea. Pariatur, fugit doloremque in voluptates sunt hic facere quod odio fugiat et repudiandae suscipit dolorum debitis maiores eligendi commodi qui dignissimos laudantium cumque quas soluta. Eum eius in voluptate, quidem, vitae natus doloribus, sint minus voluptatibus autem distinctio itaque provident animi excepturi quibusdam dignissimos. Numquam placeat dolore, eos praesentium aliquid dignissimos fugiat doloremque asperiores! Facilis autem eaque amet quidem ut voluptas quasi sit ratione doloribus!</p>
+    <p id="teksnimasi"> voluptas quasi sit ratione doloribus!</p>
   </section>
 
   <section>
